[build-system]
requires = ["setuptools", "numpy", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "mmpose"
version = "1.3.2"
description = "OpenMMLab Pose Estimation Toolbox and Benchmark."
readme = "README.md"
authors = [
    {name = "MMPose Contributors", email = "openmmlab@gmail.com"}
]
license = "Apache License 2.0"
keywords = ["computer vision", "pose estimation"]
urls = { "Homepage" = "https://github.com/open-mmlab/mmpose" }
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "chumpy",
    "importlib",
    "json_tricks",
    "matplotlib",
    "mmcv @ git+https://github.com/theroughhouse/mmcv.git",
    "mmengine @ git+https://github.com/theroughhouse/mmengine.git",
    "munkres",
    "numpy",
    "opencv-python",
    "pillow",
    "scipy",
    "torchvision",
    "xtcocotools @ git+https://github.com/theroughhouse/xtcocoapi.git"
]

[project.optional-dependencies]
tests = [
    "coverage",
    "flake8",
    "interrogate",
    "isort==4.3.21",
    "parameterized",
    "pytest",
    "pytest-runner",
    "xdoctest>=0.10.0",
    "yapf"
]
optional = [
    "requests"
]

[tool.setuptools.packages.find]
where = [".", "projects/rtmpose3d"]
exclude = ["configs", "tools", "demo"]

[tool.setuptools.package-data]
"mmpose.ops" = ["*/*.so"]

[tool.setuptools]
py-modules = [ "mmpose" ]
include-package-data = true
zip-safe = false
